# git-bench

./: Cargo.toml  Makefile  README.md  benchmark-data.json  benchmark-output.txt  data.json  index.html
.github/workflows/: benchmark-example.yml  benchmark.yml
assets/: git-bench-dashboard-dxhfc6929ffc84de323.js  git-bench-dashboard_bg-dxhdec24fa21366f29d.wasm
benches/: bench.rs  libtest.rs
crates/cli/: Cargo.toml
crates/cli/src/: alert.rs  deployment.rs  error.rs  file_manager.rs  git.rs  git_ops.rs  github.rs  main.rs  validation.rs
crates/core/: Cargo.toml
crates/core/src/: compare.rs  data.rs  error.rs  lib.rs  parser.rs
crates/dashboard/: Cargo.toml  Dioxus.toml  Makefile  build.sh  test-data.json
crates/dashboard/assets/: data.json
crates/dashboard/src/: main.rs  styles.rs
dashboard/: Cargo.toml  Dioxus.toml  README.md  build.sh  index.html
dashboard/src/: main.rs  styles.css  types.rs
demo/: benchmark-data.json
dev/bench/: data.json  index.html
dev/bench/assets/: git-bench-dashboard-dxh145b48438d753bc.js  git-bench-dashboard-dxh2bfc37bccd9a94c7.js  git-bench-dashboard-dxh2c9fb579e4bb5ff8.js  git-bench-dashboard-dxh2fbabb7aff0fbf7.js  git-bench-dashboard-dxh3526b4fb99d97b6.js  git-bench-dashboard-dxh36f7aa69ed805150.js  git-bench-dashboard-dxh391b83d818aecc2.js  git-bench-dashboard-dxh5614cb6717cadbbf.js  git-bench-dashboard-dxh59fd181c2cd71d.js  git-bench-dashboard-dxh67712c68f8209245.js  git-bench-dashboard-dxh79375dc8f140ef73.js  git-bench-dashboard-dxh7b586b6ee835ad8.js  git-bench-dashboard-dxh81b92d161fd4c5c8.js  git-bench-dashboard-dxh842536e28457ae.js  git-bench-dashboard-dxh8c1419c36751beb.js  git-bench-dashboard-dxh8f17c3fdc09fa6ec.js  git-bench-dashboard-dxh90e7d6f28b75a94.js  git-bench-dashboard-dxh9a9c18b7c25a2a15.js  git-bench-dashboard-dxh9c9f756c1a1fe51e.js  git-bench-dashboard-dxha0822bcc75d316f0.js  git-bench-dashboard-dxha7b1add2eb9178a6.js  git-bench-dashboard-dxhb059c6f353ea726d.js  git-bench-dashboard-dxhb0b75e57a23672ac.js  git-bench-dashboard-dxhb17cf9f3482438cf.js  git-bench-dashboard-dxhbfeff5c4a154e1ee.js  git-bench-dashboard-dxhc0a38623454084b5.js  git-bench-dashboard-dxhc999431e75ec5bdc.js  git-bench-dashboard-dxhcee53b55d0886fa9.js  git-bench-dashboard-dxhda7e535e3afb4785.js  git-bench-dashboard-dxhf73884938eb5cb3.js  git-bench-dashboard-dxhff7d8ba9e4a639ed.js  git-bench-dashboard_bg-dxh1bd4f457d26d66f0.wasm  git-bench-dashboard_bg-dxh2779705d41ca652.wasm  git-bench-dashboard_bg-dxh2a2e10ae7fd7b624.wasm  git-bench-dashboard_bg-dxh2f5732d6bf7aed10.wasm  git-bench-dashboard_bg-dxh36c2a65ac1fee071.wasm  git-bench-dashboard_bg-dxh395ec084157e1225.wasm  git-bench-dashboard_bg-dxh3e53344e7555f887.wasm  git-bench-dashboard_bg-dxh5447fed6eb3cc4.wasm  git-bench-dashboard_bg-dxh5ab41eeedd5a6969.wasm  (+22 more)
examples/: sample_bench_output.txt  sample_bench_output2.txt  sample_bench_output3.txt
examples/example-bench/: Cargo.toml  README.md  benchmark-output.txt
examples/example-bench/benches/: criterion_benches.rs
examples/example-bench/src/: lib.rs
src/: alert.rs  compare.rs  data.rs  error.rs  git.rs  github.rs  html.rs  lib.rs  main.rs  parser.rs
