[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    # Note: dashboard is excluded as it needs special WASM build
]
exclude = ["crates/dashboard", "examples/example-bench"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/git-bench"
