[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]
exclude = ["crates/dashboard"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fedemagnani/git-bench"

# Root package for dogfooding benchmarks
[package]
name = "git-bench-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
criterion = "0.5"

# Criterion benchmarks (stable Rust)
[[bench]]
name = "criterion"
harness = false

# Libtest benchmarks (nightly Rust, #![feature(test)])
[[bench]]
name = "libtest"
harness = true
