[package]
name = "git-bench-dashboard"
version = "0.1.0"
edition = "2021"
description = "Dioxus-based benchmark dashboard for git-bench"

# Standalone crate (not part of parent workspace)
[workspace]

[dependencies]
# Dioxus framework
dioxus = { version = "0.6", features = ["web"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling (WASM compatible)
chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind", "std"] }

# Web utilities
gloo-net = "0.6"
wasm-bindgen = "0.2"

# Logging for WASM
tracing = "0.1"
tracing-wasm = "0.2"
