[package]
name = "example-bench"
version = "0.1.0"
edition = "2021"
description = "Example crate demonstrating git-bench with Criterion and libtest benchmarks"

[features]
nightly = []

[lib]
name = "example_bench"
path = "src/lib.rs"
bench = true           # Enable libtest benches in lib.rs

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "criterion_benches"
harness = false
